--- a/species-rivalry.vcxproj
+++ b/species-rivalry.vcxproj
@@ -20,37 +20,29 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
+    <ProjectGuid>{6D74F9AC-1E95-41F1-BC63-5EB03FEB577C}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{7aee3c9f-04f3-4695-a092-088205124e04}</ProjectGuid>
-    <RootNamespace>poproj1</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
-    <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
-    <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -74,109 +66,76 @@
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <LinkIncremental>false</LinkIncremental>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <WarningLevel>Level3</WarningLevel>
-      <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <ConformanceMode>true</ConformanceMode>
+      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <Optimization>Disabled</Optimization>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <TargetMachine>MachineX86</TargetMachine>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
-      <FunctionLevelLinking>true</FunctionLevelLinking>
-      <IntrinsicFunctions>true</IntrinsicFunctions>
-      <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <ConformanceMode>true</ConformanceMode>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
+      <WarningLevel>Level3</WarningLevel>
+      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
+      <TargetMachine>MachineX86</TargetMachine>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
-    </Link>
-  </ItemDefinitionGroup>
-  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
-      <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <ConformanceMode>true</ConformanceMode>
-    </ClCompile>
-    <Link>
-      <SubSystem>Console</SubSystem>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
-    </Link>
-  </ItemDefinitionGroup>
-  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
-      <FunctionLevelLinking>true</FunctionLevelLinking>
-      <IntrinsicFunctions>true</IntrinsicFunctions>
-      <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <ConformanceMode>true</ConformanceMode>
-    </ClCompile>
-    <Link>
-      <SubSystem>Console</SubSystem>
-      <EnableCOMDATFolding>true</EnableCOMDATFolding>
-      <OptimizeReferences>true</OptimizeReferences>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Antylopa.cpp" />
-    <ClCompile Include="BarszczSosnowskiego.cpp" />
-    <ClCompile Include="Czlowiek.cpp" />
-    <ClCompile Include="Guarana.cpp" />
-    <ClCompile Include="Input.cpp" />
-    <ClCompile Include="Lis.cpp" />
-    <ClCompile Include="Mlecz.cpp" />
-    <ClCompile Include="Organizm.cpp" />
-    <ClCompile Include="Owca.cpp" />
     <ClCompile Include="po_proj_1.cpp" />
-    <ClCompile Include="Roslina.cpp" />
-    <ClCompile Include="Swiat.cpp" />
-    <ClCompile Include="Symulacja.cpp" />
-    <ClCompile Include="Trawa.cpp" />
-    <ClCompile Include="WilczeJagody.cpp" />
-    <ClCompile Include="Wilk.cpp" />
-    <ClCompile Include="Zolw.cpp" />
-    <ClCompile Include="Zwierze.cpp" />
+    <ClCompile Include="source\animals\Antylopa.cpp" />
+    <ClCompile Include="source\animals\Czlowiek.cpp" />
+    <ClCompile Include="source\animals\Lis.cpp" />
+    <ClCompile Include="source\animals\Owca.cpp" />
+    <ClCompile Include="source\animals\Wilk.cpp" />
+    <ClCompile Include="source\animals\Zolw.cpp" />
+    <ClCompile Include="source\animals\Zwierze.cpp" />
+    <ClCompile Include="source\Input.cpp" />
+    <ClCompile Include="source\Organizm.cpp" />
+    <ClCompile Include="source\plants\BarszczSosnowskiego.cpp" />
+    <ClCompile Include="source\plants\Guarana.cpp" />
+    <ClCompile Include="source\plants\Mlecz.cpp" />
+    <ClCompile Include="source\plants\Roslina.cpp" />
+    <ClCompile Include="source\plants\Trawa.cpp" />
+    <ClCompile Include="source\plants\WilczeJagody.cpp" />
+    <ClCompile Include="source\Swiat.cpp" />
+    <ClCompile Include="source\Symulacja.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Antylopa.h" />
-    <ClInclude Include="BarszczSosnowskiego.h" />
-    <ClInclude Include="Czlowiek.h" />
-    <ClInclude Include="Guarana.h" />
-    <ClInclude Include="Input.h" />
-    <ClInclude Include="Lis.h" />
-    <ClInclude Include="Mlecz.h" />
-    <ClInclude Include="Organizm.h" />
-    <ClInclude Include="Owca.h" />
-    <ClInclude Include="Roslina.h" />
-    <ClInclude Include="Swiat.h" />
-    <ClInclude Include="Symulacja.h" />
-    <ClInclude Include="tabulate.hpp" />
-    <ClInclude Include="Trawa.h" />
-    <ClInclude Include="WilczeJagody.h" />
-    <ClInclude Include="Wilk.h" />
-    <ClInclude Include="Zolw.h" />
-    <ClInclude Include="Zwierze.h" />
+    <ClInclude Include="source\animals\Antylopa.h" />
+    <ClInclude Include="source\animals\Czlowiek.h" />
+    <ClInclude Include="source\animals\Lis.h" />
+    <ClInclude Include="source\animals\Owca.h" />
+    <ClInclude Include="source\animals\Wilk.h" />
+    <ClInclude Include="source\animals\Zolw.h" />
+    <ClInclude Include="source\animals\Zwierze.h" />
+    <ClInclude Include="source\Input.h" />
+    <ClInclude Include="source\Organizm.h" />
+    <ClInclude Include="source\plants\BarszczSosnowskiego.h" />
+    <ClInclude Include="source\plants\Guarana.h" />
+    <ClInclude Include="source\plants\Mlecz.h" />
+    <ClInclude Include="source\plants\Roslina.h" />
+    <ClInclude Include="source\plants\Trawa.h" />
+    <ClInclude Include="source\plants\WilczeJagody.h" />
+    <ClInclude Include="source\Swiat.h" />
+    <ClInclude Include="source\Symulacja.h" />
+    <ClInclude Include="source\tabulate.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
